# rpmbuilder-action

./: .gitignore  Dockerfile.centos7  Dockerfile.centos8  Makefile  README.md  pyproject.toml  rpmbuilder.sh  test.sh
.github/workflows/: build.yml  test.yml
centos7/: action.yml
centos8/: action.yml
rpmbuilder/: building.py  cmd.py  exec.py  main.py  packages.py
