[tool.poetry]
name = "rpmbuilder"
version = "0.1.0"
description = "Facilitator for building RPMs through a github action"
authors = ["Kristian Berg <kristian.berg@tietoevry.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.6"
actions-toolkit = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rpmbuilder = "rpmbuilder.main:run"